--- a/app/package.json
+++ b/app/package.json
@@ -1,50 +1,35 @@
 {
-  "name": "app",
+  "name": "simple-light-react",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@coreui/react-pro": "^4.10.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/material": "^5.12.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "aos": "^3.0.0-beta.6",
     "d3": "^7.8.4",
     "d3-cloud": "^1.2.5",
     "fuse.js": "^6.6.2",
-    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-flatpickr": "^3.10.13",
+    "react-router-dom": "^6.8.1",
     "react-select": "^5.7.2",
-    "topojson": "^3.0.2",
-    "web-vitals": "^2.1.4"
+    "react-transition-group": "^4.4.5",
+    "sticky-js": "^1.3.0",
+    "topojson": "^3.0.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.0",
+    "tailwindcss": "^3.2.6",
+    "vite": "^4.1.1"
   }
 }
