--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "aos": "^3.0.0-beta.6",
     "d3": "^7.8.4",
     "d3-cloud": "^1.2.5",
+    "d3-sankey": "^0.12.3",
     "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-d3-tree": "^3.5.2",
